--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ noisereduce==2.0.0
 numpy==1.21.4
 pandas==1.3.4
 pyAudioAnalysis==0.3.14
+pydub==0.25.1
 scikit_learn==1.1.1
 scipy==1.7.3
 seaborn==0.11.2
